# Nastart-TMA_Backend

./: Dockerfile.api  Dockerfile.bot  config.py  delivery.geojson  docker-compose.yml  pyproject.toml  run_api.sh  run_bot.sh
alembic/: env.py
alembic/versions/: 1564fcd98c34_.py  1e4bbc0669c8_.py  44d1a0861340_delivery_method.py  5003652f7e1d_qwer.py  574eef5bcc04_address_details.py  62f1a779890a_order_details.py  8081a91cd986_add_ative_field_on_items.py  8a57f66f9561_payment_for_orders.py  982d10ada902_add_product_categories.py  b7258b572408_initial.py  c511743cb5ca_fix_type_in_flavour.py  d1da4316a51c_.py
api/: deps.py  main.py  schemas.py  webhook.py
api/routers/: addresses.py  checkout.py  items.py  metrics.py  orders.py
api/services/: addresses.py  mail.py
bot/: keyboards.py  main.py  middlewares.py
bot/routers/admin/: __init__.py  admin.py  edit_product.py  newproduct.py  products.py
db/: __init__.py  crud.py  models.py
